// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component when size is large should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1 MuiButton-text MuiButton-textSizeLarge MuiButton-sizeLarge"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-2"
  >
    A Button Component
  </span>
</button>
`;

exports[`Button component when size is medium should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-2"
  >
    A Button Component
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component when size is small should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1 MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-2"
  >
    A Button Component
  </span>
</button>
`;

exports[`Button component when variant is contained should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1 MuiButton-contained"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-2"
  >
    A Button Component
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component when variant is outlined should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1 MuiButton-outlined"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-2"
  >
    A Button Component
  </span>
</button>
`;

exports[`Button component when variant is text should match snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-2"
  >
    A Button Component
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
